--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@quasar/extras": "^1.16.17",
     "axios": "^1.8.4",
     "cos-js-sdk-v5": "^1.8.7",
+    "echarts": "^5.6.0",
     "nprogress": "^0.2.0",
     "qs": "^6.14.0",
     "quasar": "^2.18.1",
